@@ -45,6 +45,11 @@
       <para>June 11th, 2017</para>
       <itemizedlist>
         <listitem>
+          <para>[renodr] - Fix location of nfs-utils binaries so that
+          the systemd units and sysvinit bootscripts match properly.
+          Discussed in IRC with Bruce and DJ.</para>
+        </listitem>
+        <listitem>
           <para>[ken] - Update to nss-3.31.  Fixes
           <ulink url="&blfs-ticket-root;9350">#9350</ulink>.</para>
         </listitem>
