@@ -156,6 +156,7 @@ useradd -c "Unprivileged Nobody" -d /dev/null -g nogroup \
 
 <screen><userinput>./configure --prefix=/usr          \
             --sysconfdir=/etc      \
+            --sbindir=/sbin        \
             --without-tcp-wrappers \
             --disable-nfsv4        \
             --disable-gss &amp;&amp;
