@@ -6,6 +6,7 @@
 #
 # Authors     : Ken Moffat - ken@linuxfromscratch.org
 #               Bruce Dubbs - bdubbs@linuxfromscratch.org
+#               Douglas R. Reno - renodr@linuxfromscratch.org
 #
 # Version     : LFS 7.0
 #
@@ -32,13 +33,13 @@
 case "$1" in
    start)
       log_info_msg "Starting NFS statd..."
-      start_daemon /usr/sbin/rpc.statd --no-notify
+      start_daemon /sbin/rpc.statd --no-notify
       evaluate_retval
       ;;
 
    stop)
       log_info_msg "Stopping NFS statd..."
-      killproc /usr/sbin/rpc.statd
+      killproc /sbin/rpc.statd
       evaluate_retval
       ;;
 
@@ -49,7 +50,7 @@ case "$1" in
       ;;
 
    status)
-      statusproc /usr/sbin/rpc.statd
+      statusproc /sbin/rpc.statd
       ;;
 
    *)
